--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# jekyll #
+#########
+_site/
+
 # stupid mac crap #
 ##################
 .DS_Store*
 
 # text editor crap #
-####################
+###################
 *.sublime-project
 *.sublime-workspace
 
