--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-permalink: /webcraft/:categories/:title/
+# permalink: /webcraft/:categories/:title
+permalink: pretty
 pygments: true
 markdown: rdiscount
