--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-# permalink: /webcraft/:categories/:title.html
+permalink: /webcraft/:categories/:title.html
 pygments: true
-permalink: /webcraft/:year/:month/:day/:title
-# markdown: rdiscount
+markdown: rdiscount
