try permas with /webcraft/ again13

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-permalink: "../webcraft/:categories/:title"
+permalink: /:categories/:title
+baseurl: http://lab.zacharykain.com/webcraft/
 pygments: true
