--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 permalink: /:categories/:title
-baseurl: http://lab.zacharykain.com/webcraft/
+url: http://lab.zacharykain.com/webcraft/
 pygments: true
