--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 baseurl: http://lab.zacharykain.com/webcraft/
-permalink: "/{{ site.baseurl }}/:categories/:title"
+permalink: /:categories/:title
 pygments: true
