--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-baseurl: http://lab.zacharykain.com/webcraft/
+baseurl: http://lab.zacharykain.com/webcraft
 permalink: /:categories/:title
 pygments: true
